fix: CORS config